INICIO DE PROYECTO FORK
[ ES ]
- Se incluyó la versión del Tiny Maker de Windows 10 con interface en español y en inglés.

- Se agregaron archivos de documentación en español y en inglés

- Y se crearon versiones en español y en inglés del script no para crear un ISO sino para correrlo después que tienes un Windows ya instalado limpio se recomienda actualizar primero el computador para tener todas las actualizaciones automáticas y luego proceder a correr el script de optimización.

[ EN ]

- The Windows 10 Tiny Maker version with Spanish and English interface was included.

- Documentation files in Spanish and English were added.

- Spanish and English versions of the script were created not to create an ISO but to run it after you have a clean Windows already installed, it is recommended to update the computer first to have all the automatic updates and then proceed to run the optimization script.

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,8 +1,7 @@
 
 
-github: [ntdevlabs] 
-patreon: [ntdev] 
-ko-fi: [ntdev]
+github: [amaganon] 
+
 
 # Add custom links to support your work
-custom: ['https://paypal.me/ntdev2']
+custom: ['https://paypal.me/techdinecom']
